--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "lint": "eslint src/**",
-    "start:dev": "nodemon --exec 'npm run lint && node ./src/index.js'"
+    "start:dev": "nodemon --exec 'npm run lint node ./src/index.js'"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,12 @@
   "homepage": "https://github.com/camilamkp/CRUD-library-project#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "express": "^4.17.3"
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.7"
   },
   "devDependencies": {
+    "eslint": "^8.11.0",
     "nodemon": "^2.0.15"
   }
 }
