--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/index.js",
     "lint": "eslint src/**",
-    "start:dev": "nodemon --exec 'npm run lint node ./src/index.js'"
+    "start:dev": "nodemon --exec 'npm run lint node ./src/index.js'",
+    "start:seed": "node ./src/fakingData/seedData.js",
+    "start:purge": "node ./src/fakingData/purgeData.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
   "homepage": "https://github.com/camilamkp/CRUD-library-project#readme",
   "dependencies": {
     "body-parser": "^1.19.2",
+    "chance": "^1.1.8",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
