--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
